[workspace]
members = [
    "contract-storage",
    "contract-utilities",
    "examples/contract-v1",
    "examples/contract-v2",
    "examples/counter-call",
    "tests",
]

default-members = [
    "contract-storage",
    "contract-utilities",
]

[profile.release]
overflow-checks = true
lto = true
codegen-units = 1
opt-level= "s"



